--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "babel-plugin-import",
-  "version": "1.4.0",
+  "name": "babel-plugin-import-lib",
+  "version": "1.0.0",
   "description": "Component modular import plugin for babel.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ant-design/babel-plugin-import"
-  },
   "main": "lib/index.js",
   "scripts": {
     "build": "rm -rf lib && ./node_modules/.bin/babel src --out-dir lib --ignore __tests__",
@@ -18,10 +14,9 @@
     "lint"
   ],
   "keywords": [
-    "babel-plugin",
-    "antd"
+    "babel-plugin"
   ],
-  "author": "chencheng <sorrycc@gmail.com>",
+  "author": "zhangking <zhangking520@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.3.13",
